testsuite/tests/annotations/should_fail/T19374b.hs
module T19347b where

(%%) :: [a] -> [a] -> [a]
(%%) = (++)
{-# ANN (T19347b.%%) "This is an annotation" #-}
