testsuite/tests/annotations/should_fail/T19374b.stderr

T19374b.hs:5:10: error: parse error on input ‘T19347b.%%’
